--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,15 +9,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name: "
-            android:textSize="16sp"
-            android:textStyle="normal|bold" />
-
+        android:orientation="vertical">
         <TextView
             android:id="@+id/name"
             android:layout_width="fill_parent"
@@ -27,19 +19,6 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email: "
-            android:textSize="16sp"
-            android:textStyle="normal|bold" />
 
         <TextView
             android:id="@+id/email"
@@ -47,28 +26,6 @@
             android:layout_height="wrap_content"
             android:paddingBottom="2dip"
             android:textColor="@color/colorAccent" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mobile: "
-            android:textSize="16sp"
-            android:textStyle="normal|bold" />
-
-        <TextView
-            android:id="@+id/mobile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#5d5d5d"
-            android:textStyle="bold" />
-
     </LinearLayout>
 
 </LinearLayout>
