--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:id="@+id/main_group" android:checkableBehavior="single">
         <item
@@ -18,6 +19,10 @@
             android:id="@+id/achievements"
             android:icon="@drawable/ic_menu_achievements"
             android:title="@string/achievements"/>
+        <item
+            android:id="@+id/exams"
+            android:icon="@drawable/ic_menu_exams"
+            android:title="@string/exams"/>
         <item
             android:id="@+id/progress"
             android:icon="@drawable/ic_menu_progress"
