--- a/app/src/main/res/layout/exams_fragment.xml
+++ b/app/src/main/res/layout/exams_fragment.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/exam_page_activity"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/exams"/>
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/exam_item_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false">
+    </ListView>
+</android.support.v4.widget.SwipeRefreshLayout>
