--- a/app/src/main/res/layout/f_grants_fragment.xml
+++ b/app/src/main/res/layout/f_grants_fragment.xml
@@ -16,8 +16,7 @@
         android:minHeight="?attr/actionBarSize"
         app:tabIndicatorHeight="3dp"
         app:tabIndicatorColor="@color/white"
-        app:tabTextColor="@color/white"
-        app:tabSelectedTextColor="@color/white"/>
+        app:tabTextColor="@color/white"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/grantsPager"
