--- a/app/src/main/res/layout/f_exams_fragment.xml
+++ b/app/src/main/res/layout/f_exams_fragment.xml
@@ -7,9 +7,10 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <Spinner style="@style/WhiteTextView"
+        <Spinner
             android:layout_width="match_parent"
             android:layout_height="48sp"
+            android:gravity="center"
             android:id="@+id/spinner_exam"
             android:entries="@array/spin"
             android:spinnerMode="dropdown"
