--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#2d4a74</color>
     <color name="white">#ffffff</color>
     <color name="grey">#d3d3d3</color>
+    <color name="black">#000000</color>
 </resources>
