--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,19 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark"/>
 
-    <style name="WhiteTextView">
-        <item name="android:textColor">@android:color/white</item>
+    <!-- TabLayout style -->
+    <style name="NavigationTab" parent="Widget.Design.TabLayout">
+        <item name="tabBackground">@drawable/p_tab_selector</item>
+        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabIndicatorColor">@color/colorPrimary</item>
+        <item name="tabIndicatorHeight">3dp</item>
+        <item name="tabTextAppearance">@style/NavigationTabTextAppeareance</item>
     </style>
+
+    <style name="NavigationTabTextAppeareance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">false</item>
+    </style>
+    <!--#################-->
 
 </resources>
