--- a/app/src/main/res/layout/t_grants_tab.xml
+++ b/app/src/main/res/layout/t_grants_tab.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/grants_page_activity"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewGrants"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/grant_item_list"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/grants"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false">
+    </ListView>
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
