--- a/app/src/main/res/layout/f_education_fragment.xml
+++ b/app/src/main/res/layout/f_education_fragment.xml
@@ -7,6 +7,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/education"/>
+        android:text="Сведений об образвании нет. JSon файл так и не пришёл((( Как только так сразу"/>
 
 </LinearLayout>
