--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="white">#ffffff</color>
     <color name="grey">#d3d3d3</color>
     <color name="black">#000000</color>
+    <color name="red">#CD5C5C</color>
+    <color name="blue">#ADD8E6</color>
 </resources>
