--- a/app/src/main/res/layout/p_list_item_exam.xml
+++ b/app/src/main/res/layout/p_list_item_exam.xml
@@ -1,45 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="@dimen/fab_margin">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/title_exam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/title_exam"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="2dip"
-            android:paddingTop="6dip"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+        android:textSize="@dimen/m_text_size"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="Перспективное ПО"
+        android:textStyle="normal|bold" />
 
-        <TextView
-            android:id="@+id/date_exam"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="2dip"
-            android:textColor="@color/colorAccent" />
-
-        <TextView
-            android:id="@+id/location_exam"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="2dip"
-            android:textColor="@color/colorAccent" />
-
-        <TextView
-            android:id="@+id/teacher_exam"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="2dip"
-            android:textColor="@color/colorAccent" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/date_exam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/m_text_size"
+        android:textColor="@color/colorAccent"
+        android:text="19.01.2016"/>
+    <TextView
+        android:id="@+id/teacher_exam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/m_text_size"
+        android:textColor="@color/colorAccent"
+        android:text="Петров Д.И."/>
+    <TextView
+        android:id="@+id/location_exam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/m_text_size"
+        android:textColor="@color/colorAccent"
+        android:text="МЕсто такое-то"/>
 
 </LinearLayout>
