--- a/app/src/main/res/layout/p_progress_item_list.xml
+++ b/app/src/main/res/layout/p_progress_item_list.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="100">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +26,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="150sp"
+            android:layout_width="0dp"
+            android:layout_weight="40"
             android:layout_height="match_parent"
             android:padding="5sp"
             android:background="@drawable/background"
@@ -33,7 +35,8 @@
             android:gravity="center"
             android:text="Оценка"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="60"
             android:layout_height="match_parent"
             android:padding="5sp"
             android:background="@drawable/background"
@@ -47,7 +50,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="150sp"
+            android:layout_width="0dp"
+            android:layout_weight="40"
             android:layout_height="match_parent"
             android:padding="5sp"
             android:background="@drawable/background"
@@ -55,7 +59,8 @@
             android:gravity="center"
             android:text="Балл рейтинга"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="60"
             android:layout_height="match_parent"
             android:padding="5sp"
             android:textSize="20sp"
@@ -69,7 +74,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="150sp"
+            android:layout_width="0dp"
+            android:layout_weight="40"
             android:layout_height="match_parent"
             android:padding="5sp"
             android:textSize="20sp"
@@ -77,7 +83,8 @@
             android:gravity="center"
             android:text="Дата получения"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="60"
             android:layout_height="match_parent"
             android:padding="5sp"
             android:textSize="20sp"
